samples/_failures_safe/1761643100_60dd1d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57b0b3b9.c: In function ‘main’:
./samples/SAFE/__tmp_57b0b3b9.c:199: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_57b0b3b9.c:198:5: error: expected declaration or statement at end of input
  198 |     for
      |     ^~~
